Convert VCard to UTF-8

BUG: 310137
FIXED-IN: 4.10.2